<resources>
    <string name="app_name">TopRestaurant</string>
    <string name="no_internet_connection" />
    <string name="no_restaurant" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food">food</string>
    <string name="t">T</string>
    <string name="op">op</string>
    <string name="r">R</string>
    <string name="estaurant">estaurant</string>
    <string name="enter_a_city">Enter a City</string>
    <string name="searchbutton">searchButton</string>
    <string name="restaurantName">restaurantName</string>
    <string name="restaurantLocation">restaurantLocation</string>
    <string name="restaurantRating">restaurantRating</string>
    <string name="city">city</string>
    <string name="query">query</string>
    <string name="restaurant">restaurants+</string>
    <string name="mykey">AIzaSyC0ph8P4Si2kZ4-ZQte8-L5sxT_zYCFhys</string>
    <string name="key">key</string>
    <string name="address">Address :</string>
    <string name="rating">Rating :</string>
</resources>