<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/food"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/vietnamesefood" />

    <LinearLayout
        android:id="@+id/textviewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin80"
        android:layout_marginTop="@dimen/margin80"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tangerine_bold"
            android:text="@string/t"
            android:textColor="#CDF6F2"
            android:textSize="90sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tangerine_bold"
            android:text="@string/op"
            android:textColor="#CDF6F2"
            android:textSize="@dimen/text70" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textviewTop"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginBig"
            android:fontFamily="@font/tangerine_bold"
            android:text="@string/r"
            android:textColor="#CDF6F2"
            android:textSize="90sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tangerine_bold"
            android:text="@string/estaurant"
            android:textColor="#CDF6F2"
            android:textSize="@dimen/text70" />

    </LinearLayout>

    <EditText
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autofillHints="@string/enter_a_city"
        android:ems="10"
        android:hint="@string/enter_a_city"
        android:inputType="text"
        android:textColor="#EFD6D6"
        android:textColorHint="#BAA0A0"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/cityName"
        android:layout_centerInParent="true"
        android:backgroundTint="#FBCE8B"
        android:contentDescription="@string/searchbutton"
        app:srcCompat="@android:drawable/ic_menu_search"
        tools:ignore="SpeakableTextPresentCheck" />

</RelativeLayout>